# TrailMetrics

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: Home.py  _helpers.py
app/pages/: 1_How_it_works.py  1_Personalized_GAP_Simulator.py  2_How_it_works.py  2_Personalized_GAP_Simulator.py  3_Race_Comparator.py  4_Long_Term_Progress.py
data/: time_predictor.csv
notebook/: app-flow.ipynb
notebook/gap/: experimental.ipynb  full-flow.ipynb
notebook/time_predictor/: experimental.ipynb
src/: data_preprocessing.py  gap_model.py  translations.py  utils.py
src/domain/: plotting_common.py
src/domain/gap/: base.py  efficiency_model.py  plotting.py  preprocessing.py  reference_curves.py  smoothing.py  theme.py  xgboost_model.py
src/domain/models/: activity.py  gap.py
src/domain/ports/: activity_stream_source.py
src/domain/progress/: aggregates.py  models.py  plotting.py  records.py
src/domain/races/: metrics.py  plotting.py  smoothing.py
src/gap/: data_preprocessing.py  modeling.py
src/infrastructure/strava/: strava_client.py
src/usecases/: analyze_long_term_progress.py  base.py  compare_races.py  fetch_athlete_history.py  simulate_personalized_gap_model.py
